Add stubs and test stubs for check and checkmate detectors

--- a/de1/makefile
+++ b/de1/makefile
@@ -2,14 +2,18 @@ runtest: \
 test/test.c \
 test/test-game.c \
 test/test-possible-move-generators.c \
+test/test-ai-move-generator.c \
 $(wildcard test/generator-tests/*.c) \
 game.c \
-possible-move-generators.c
+possible-move-generators.c \
+ai-move-generator.c
 
 	gcc -g -o bin/runtest \
 	test/test.c \
 	test/test-game.c \
 	test/test-possible-move-generators.c \
+	test/test-ai-move-generator.c \
 	$(wildcard test/generator-tests/*.c) \
 	game.c \
-	possible-move-generators.c
+	possible-move-generators.c \
+	ai-move-generator.c
