--- a/frontend/ChessieGame/app/src/main/AndroidManifest.xml
+++ b/frontend/ChessieGame/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.chessiegame">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -10,6 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.ChessieGame">
         <activity android:name=".ChessScreen"></activity>
         <activity android:name=".HomeActivity" />
