--- a/frontend/ChessieGame/app/build.gradle
+++ b/frontend/ChessieGame/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
