--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ simple-chess-ai
 backend/config/db_config_file.js
 de1/hardware/modelsim/*
 de1/hardware/rook_project
+de1/hardware/bishop_project
+de1/hardware/queen_project
