--- a/frontend/ChessieGame/app/build.gradle
+++ b/frontend/ChessieGame/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'com.facebook.android:facebook-android-sdk:5.0.0'
+
 }
