--- a/frontend/ChessieGame/app/src/main/AndroidManifest.xml
+++ b/frontend/ChessieGame/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,6 +29,12 @@
         <activity
             android:name=".PopDifficulty"
             android:theme="@style/AppTheme.CustomTheme" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
+
+
     </application>
 
 </manifest>
