--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,12 @@ de1/hardware/modelsim/*
 de1/hardware/rook_project
 de1/hardware/bishop_project
 de1/hardware/queen_project
+de1/hardware/pawn-project
 *.qsf
 *.qpf
 *.csv
 *.tcl
+*.tcl~
 *.sopcinfo
 *.qsf.bak
 *.txt
@@ -23,3 +25,4 @@ de1/hardware/de1-system/monitor
 de1/hardware/de1-system/incremental_db
 de1/hardware/de1-system/output_files
 de1/hardware/de1-system/sys
+de1/game.c.o
