--- a/de1/makefile
+++ b/de1/makefile
@@ -5,7 +5,8 @@ test/test-possible-move-generators.c \
 test/test-ai-move-generator.c \
 $(wildcard test/generator-tests/*.c) \
 game.c \
-possible-move-generators.c \
+possible-move-generators-SW.c \
+generator-support-SW.c \
 ai-move-generator.c
 
 	gcc -std=c99 -Wall -fsigned-char -g -o bin/runtest \
@@ -15,6 +16,7 @@ ai-move-generator.c
 	test/test-ai-move-generator.c \
 	$(wildcard test/generator-tests/*.c) \
 	game.c \
-	possible-move-generators.c \
+	possible-move-generators-SW.c \
+	generator-support-SW.c \
 	ai-move-generator.c \
 	-lm
