Trial for HW pawn generator

--- a/de1/makefile
+++ b/de1/makefile
@@ -1,4 +1,5 @@
-runtest: \
+# Test the SW version of the ai
+runtestSW: \
 test/test.c \
 test/test-game.c \
 test/test-possible-move-generators.c \
@@ -9,7 +10,7 @@ possible-move-generators-SW.c \
 generator-support-SW.c \
 ai-move-generator.c
 
-	gcc -std=c99 -Wall -fsigned-char -g -o bin/runtest \
+	gcc -std=c99 -Wall -fsigned-char -g -o bin/runtestSW \
 	test/test.c \
 	test/test-game.c \
 	test/test-possible-move-generators.c \
@@ -20,3 +21,28 @@ ai-move-generator.c
 	generator-support-SW.c \
 	ai-move-generator.c \
 	-lm
+
+# Test the HW version of the AI
+runtestHW: \
+test/test.c \
+test/test-game.c \
+test/test-possible-move-generators.c \
+test/test-ai-move-generator.c \
+$(wildcard test/generator-tests/*.c) \
+game.c \
+possible-move-generators-SW.c \
+generator-support-SW.c \
+ai-move-generator.c
+
+	gcc -std=c99 -Wall -fsigned-char -g -o bin/runtestHW \
+	test/test.c \
+	test/test-game.c \
+	test/test-possible-move-generators.c \
+	test/test-ai-move-generator.c \
+	$(wildcard test/generator-tests/*.c) \
+	game.c \
+	possible-move-generators-HW.c \
+	generator-support-SW.c \
+	ai-move-generator.c \
+	-lm
+	
